style: format Java sources and Maven configuration